# assigny

./: .gitignore  README.md  test_slack_date.py
backend/: README.md  app.db  env.example  pyproject.toml  requirements.txt
backend/app/: agent.py  config.py  db.py  main.py  mcp_server.py  models.py  repositories.py  router.py  schemas.py  seed.py  startup.py
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
